handle slot val contained in utterance word

--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "7ac0b431",
+   "id": "057b7421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "73698fba",
+   "id": "b475a2e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "b85a787a",
+   "id": "3f8ef09e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "6c991b3e",
+   "id": "d8e21350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "5b08ddd4",
+   "id": "9c68ca92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "8d360f62",
+   "id": "02ea7d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,12 @@
     "                    BI_slotName += \"B-\" + slotNameList[i] + \" \" # 1st part is B-slotname\n",
     "                else:\n",
     "                    BI_slotName += \"I-\" + slotNameList[i] + \" \" # subsequent parts are I-slotname\n",
-    "            utterance = utterance[: ind] + BI_slotName + utterance[ind+len(slotValList[i]) :]\n",
+    "            next_word_pos = utterance[ind :].index(' ') # num. chars in the word\n",
+    "            if next_word_pos > len(slotValList[i]): # handle slotValList[i] contained in a word\n",
+    "                ind2 = ind + next_word_pos + 1 # go past the word that contains the slotValList[i]\n",
+    "            else: # if not count for the entire length of the slotValList[i]\n",
+    "                ind2 = ind + len(slotValList[i]) \n",
+    "            utterance = utterance[: ind] + BI_slotName + utterance[ind2 :]\n",
     "        except ValueError:\n",
     "            pass\n",
     "            \n",
@@ -117,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "044f1a25",
+   "id": "49d0de89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "39b8374a",
+   "id": "3a03861f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "9d2d081a",
+   "id": "79014af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee491f0",
+   "id": "b5607725",
    "metadata": {},
    "outputs": [],
    "source": []
