--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "057b7421",
+   "execution_count": 478,
+   "id": "51f4f3a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "file_ind = \"017\"\n",
-    "target_dir = \"test_gen/\"\n",
-    "#target_dir = \"\"\n",
+    "#target_dir = \"test_gen/\"\n",
+    "target_dir = \"debug/\"\n",
     "mwoz_dir = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/\"\n",
     "mwoz_file =  mwoz_dir + \"dialogues_\" + file_ind + \".json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "b475a2e3",
+   "execution_count": 479,
+   "id": "cc7567ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "3f8ef09e",
+   "execution_count": 480,
+   "id": "07159698",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "d8e21350",
+   "execution_count": 481,
+   "id": "747c12b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "9c68ca92",
+   "execution_count": 482,
+   "id": "9f174638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "02ea7d62",
+   "execution_count": 483,
+   "id": "7df25055",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_bio_string(utterance, slotValList, slotNameList):\n",
+    "def get_bio_string(turn_utterance, slotValList, slotNameList):\n",
     "    \n",
-    "    utterance = utterance.lower()\n",
-    "    ignore_char = set(['.', '?', ':', ';', ',', '\"', \"'\", '!', '<', '>', '(', ')', '[', ']'])\n",
+    "    utterance = turn_utterance.lower()\n",
+    "    ignore_char = set(['.', '?', ':', ';', ',', '\"', \"'\", '!', '<', '>', '(', ')', '[', ']', '-'])\n",
     "    bio_str = \"\"\n",
     "    for i in range(len(slotValList)): # for each slot value in the slotValList\n",
     "        try: # check if the slot value occurs in the utterance\n",
@@ -108,21 +108,34 @@
     "            utterance = utterance[: ind] + BI_slotName + utterance[ind2 :]\n",
     "        except ValueError:\n",
     "            pass\n",
-    "            \n",
-    "    for word in utterance.strip().split(): # check if each word in utterance exist in slot value\n",
-    "        if \"B-\" in word[0:2] or \"I-\" in word[0:2]:\n",
-    "            bio_str += word + \" \"\n",
+    "    \n",
+    "    words = utterance.strip().split()\n",
+    "    for i in range(len(words)): # check if each word in utterance exist in slot value\n",
+    "        word = words[i]\n",
+    "        if \"B-\" in word or \"I-\" in word:\n",
+    "            if word[0] in ignore_char:\n",
+    "                bio_str += word[1:] + ' '\n",
+    "            else: \n",
+    "                bio_str += word + ' '\n",
     "        else:\n",
-    "            if not word in ignore_char:\n",
-    "                bio_str += \"O \"    \n",
+    "            if i == len(words) - 1: # special handling for the last word; drop if all punctuations\n",
+    "                for k in range(len(word)):\n",
+    "                    if word[k] in ignore_char:\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        bio_str += \"O \"\n",
+    "                        break\n",
+    "            else:\n",
+    "                if not word in ignore_char:\n",
+    "                    bio_str += \"O \"\n",
     "    \n",
     "    return bio_str.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "49d0de89",
+   "execution_count": 484,
+   "id": "a5da3477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +155,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "3a03861f",
+   "execution_count": 485,
+   "id": "67bca4a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_utterance(utterance, bio_str):\n",
+    "    \n",
+    "    words = utterance.split()\n",
+    "    punctuations = set(['.', '?', ':', ';', ',', '!', '<', '>', '(', ')', '[', ']', '-', '\"', \"'\"])\n",
+    "    user_utterance = \"\"\n",
+    "    for i in range(len(words)):\n",
+    "        word = words[i]\n",
+    "        if i == len(words) - 1: # last word\n",
+    "            for k in range(len(word)): # if the last word is only punctuations then drop this word\n",
+    "                if word[k] in punctuations:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    user_utterance += word + ' '\n",
+    "                    break\n",
+    "        else:\n",
+    "            if word in punctuations:\n",
+    "                user_utterance = user_utterance.strip()\n",
+    "            user_utterance += word + ' '\n",
+    "        \n",
+    "    return user_utterance.strip()     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "id": "cc2bdffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,17 +234,26 @@
     "        if hotel_restaurant: \n",
     "            bio_str = get_bio_string(turn[\"utterance\"], slotValList, slotNameList)        \n",
     "            label = get_label(intent)\n",
+    "            user_utterance = get_utterance(turn[\"utterance\"], bio_str)\n",
     "            \n",
-    "            fp_in.write(turn[\"utterance\"] + \"\\n\")\n",
+    "            fp_in.write(user_utterance + \"\\n\")\n",
     "            fp_out.write(bio_str + \"\\n\")\n",
     "            fp_label.write(label + \"\\n\")\n",
+    "            \n",
+    "            l1 = len(user_utterance.split())\n",
+    "            l2 = len(bio_str.split())\n",
+    "            if not l1 == l2:\n",
+    "                print(\"dialog_id:\", file_ind)\n",
+    "                print(bio_str)\n",
+    "                print(user_utterance)\n",
+    "                print(turn[\"utterance\"])\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "79014af0",
+   "execution_count": 487,
+   "id": "0851730f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5607725",
+   "id": "4ac1e6dc",
    "metadata": {},
    "outputs": [],
    "source": []
