parser rework to handle corner cases

--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 478,
-   "id": "51f4f3a2",
+   "execution_count": 424,
+   "id": "ff927a81",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "file_ind = \"017\"\n",
-    "#target_dir = \"test_gen/\"\n",
-    "target_dir = \"debug/\"\n",
+    "file_ind = \"002\"\n",
+    "target_dir = \"dev_gen/\"\n",
+    "#target_dir = \"debugs/\"\n",
     "mwoz_dir = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/\"\n",
     "mwoz_file =  mwoz_dir + \"dialogues_\" + file_ind + \".json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
-   "id": "cc7567ff",
+   "execution_count": 425,
+   "id": "fa514604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
-   "id": "07159698",
+   "execution_count": 426,
+   "id": "257c41fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
-   "id": "747c12b8",
+   "execution_count": 427,
+   "id": "b7ec1958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
-   "id": "9f174638",
+   "execution_count": 428,
+   "id": "716f746b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,62 +80,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
-   "id": "7df25055",
+   "execution_count": 429,
+   "id": "382da706",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_bio_string(turn_utterance, slotValList, slotNameList):\n",
+    "def get_bio_utterance(turn_utterance, slotValList, slotNameList):\n",
     "    \n",
-    "    utterance = turn_utterance.lower()\n",
-    "    ignore_char = set(['.', '?', ':', ';', ',', '\"', \"'\", '!', '<', '>', '(', ')', '[', ']', '-'])\n",
+    "    bio_utterance = turn_utterance.lower()\n",
+    "    punctuations = set(['.', '?', ':', ';', ',', '\"', \"'\", '!', '<', '>', '(', ')', '[', ']', '-'])\n",
     "    bio_str = \"\"\n",
+    "    user_utterance = \"\"\n",
+    "    utter_indList = []\n",
     "    for i in range(len(slotValList)): # for each slot value in the slotValList\n",
     "        try: # check if the slot value occurs in the utterance\n",
-    "            ind = utterance.index(slotValList[i]) # get the index of the slot value\n",
+    "            ind = bio_utterance.index(slotValList[i]) # get the index of the slot value\n",
     "            parts = slotValList[i].split() # handle blank inside slot value\n",
     "            BI_slotName = \"\"\n",
     "            for j in range(len(parts)):\n",
     "                if j == 0:\n",
-    "                    BI_slotName += \"B-\" + slotNameList[i] + \" \" # 1st part is B-slotname\n",
+    "                    BI_slotName += ' ' + \"B-\" + slotNameList[i] # 1st part is B-slotname\n",
+    "                    user_ind = turn_utterance.lower().index(slotValList[i]) # locate the slot value in turn_utterance\n",
+    "                    turn_utterance = turn_utterance[: user_ind] + ' ' + turn_utterance[user_ind :] # introduce a blank before tha\n",
     "                else:\n",
-    "                    BI_slotName += \"I-\" + slotNameList[i] + \" \" # subsequent parts are I-slotname\n",
-    "            next_word_pos = utterance[ind :].index(' ') # num. chars in the word\n",
-    "            if next_word_pos > len(slotValList[i]): # handle slotValList[i] contained in a word\n",
-    "                ind2 = ind + next_word_pos + 1 # go past the word that contains the slotValList[i]\n",
-    "            else: # if not count for the entire length of the slotValList[i]\n",
-    "                ind2 = ind + len(slotValList[i]) \n",
-    "            utterance = utterance[: ind] + BI_slotName + utterance[ind2 :]\n",
+    "                    BI_slotName += ' ' + \"I-\" + slotNameList[i] # No need for a blank for the last \n",
+    "            try:\n",
+    "                next_word_pos = bio_utterance[ind + len(slotValList[i]) :].index(' ') # to check for slotValList[i] inside a phrase in utterance\n",
+    "                ind2 = ind + len(slotValList[i]) + next_word_pos # go past the word that contains the slotValList[i]\n",
+    "                bio_utterance = bio_utterance[: ind] + BI_slotName + bio_utterance[ind2 :]\n",
+    "            except ValueError:\n",
+    "                bio_utterance = bio_utterance[: ind] + BI_slotName\n",
     "        except ValueError:\n",
     "            pass\n",
     "    \n",
-    "    words = utterance.strip().split()\n",
+    "    words = bio_utterance.strip().split()\n",
     "    for i in range(len(words)): # check if each word in utterance exist in slot value\n",
     "        word = words[i]\n",
-    "        if \"B-\" in word or \"I-\" in word:\n",
-    "            if word[0] in ignore_char:\n",
-    "                bio_str += word[1:] + ' '\n",
-    "            else: \n",
+    "        if \"B-\" in word[0:2] or \"I-\" in word[0:2]:\n",
     "                bio_str += word + ' '\n",
     "        else:\n",
     "            if i == len(words) - 1: # special handling for the last word; drop if all punctuations\n",
     "                for k in range(len(word)):\n",
-    "                    if word[k] in ignore_char:\n",
+    "                    if word[k] in punctuations:\n",
     "                        continue\n",
     "                    else:\n",
     "                        bio_str += \"O \"\n",
     "                        break\n",
     "            else:\n",
-    "                if not word in ignore_char:\n",
+    "                if not word in punctuations:\n",
     "                    bio_str += \"O \"\n",
+    "                    \n",
+    "    words = turn_utterance.strip().split()\n",
+    "    for i in range(len(words)):\n",
+    "        word = words[i]\n",
+    "        if i == len(words) - 1: # last word\n",
+    "            for k in range(len(word)): # if the last word is only punctuations then drop this word\n",
+    "                if word[k] in punctuations:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    user_utterance += word + ' '\n",
+    "                    break\n",
+    "        else:\n",
+    "            if word in punctuations:\n",
+    "                if i == 0: # very 1st word\n",
+    "                    user_utterance += word\n",
+    "                else: # add the punctuation after removing the blank\n",
+    "                    user_utterance = user_utterance.strip() + word + ' '\n",
+    "            else:\n",
+    "                user_utterance += word + ' '\n",
     "    \n",
-    "    return bio_str.strip()"
+    "    return bio_str.strip(), user_utterance.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
-   "id": "a5da3477",
+   "execution_count": 430,
+   "id": "ea57a6ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,37 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
-   "id": "67bca4a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_utterance(utterance, bio_str):\n",
-    "    \n",
-    "    words = utterance.split()\n",
-    "    punctuations = set(['.', '?', ':', ';', ',', '!', '<', '>', '(', ')', '[', ']', '-', '\"', \"'\"])\n",
-    "    user_utterance = \"\"\n",
-    "    for i in range(len(words)):\n",
-    "        word = words[i]\n",
-    "        if i == len(words) - 1: # last word\n",
-    "            for k in range(len(word)): # if the last word is only punctuations then drop this word\n",
-    "                if word[k] in punctuations:\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    user_utterance += word + ' '\n",
-    "                    break\n",
-    "        else:\n",
-    "            if word in punctuations:\n",
-    "                user_utterance = user_utterance.strip()\n",
-    "            user_utterance += word + ' '\n",
-    "        \n",
-    "    return user_utterance.strip()     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 486,
-   "id": "cc2bdffc",
+   "execution_count": 431,
+   "id": "e1730a81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +203,15 @@
     "            if active_intent == \"NONE\" and slot_values == {}: # if no active_intent, empty slot_values skip\n",
     "                continue\n",
     "            \n",
-    "            hotel_restaurant = True #set the flag true; at least one of hotel or restaurant active domain\n",
+    "            hotel_restaurant = True # set the flag true; at least one of hotel or restaurant active domain\n",
+    "                \n",
+    "            if not dom[\"slots\"] == []: # if for a domain \"slots\" exist then take only the slot\n",
+    "                slot_values = {}\n",
+    "                for entry in dom[\"slots\"]:\n",
+    "                    if type(entry[\"value\"]) is list: \n",
+    "                        slot_values[entry[\"slot\"]] = entry[\"value\"]\n",
+    "                    else:\n",
+    "                        slot_values[entry[\"slot\"]] = [entry[\"value\"]]\n",
     "            \n",
     "            if xlate_slots_intents: # if need to translate\n",
     "                try: # check if xlate_dict has this intent\n",
@@ -232,28 +231,24 @@
     "                slotValList.append(slotVal[0].lower()) # slot values\n",
     "        \n",
     "        if hotel_restaurant: \n",
-    "            bio_str = get_bio_string(turn[\"utterance\"], slotValList, slotNameList)        \n",
+    "            bio_str, user_utterance = get_bio_utterance(turn[\"utterance\"], slotValList, slotNameList)        \n",
     "            label = get_label(intent)\n",
-    "            user_utterance = get_utterance(turn[\"utterance\"], bio_str)\n",
     "            \n",
-    "            fp_in.write(user_utterance + \"\\n\")\n",
-    "            fp_out.write(bio_str + \"\\n\")\n",
-    "            fp_label.write(label + \"\\n\")\n",
-    "            \n",
-    "            l1 = len(user_utterance.split())\n",
-    "            l2 = len(bio_str.split())\n",
-    "            if not l1 == l2:\n",
+    "            if not len(user_utterance.split()) == len(bio_str.split()):\n",
     "                print(\"dialog_id:\", file_ind)\n",
     "                print(bio_str)\n",
     "                print(user_utterance)\n",
     "                print(turn[\"utterance\"])\n",
-    "            "
+    "            else:\n",
+    "                fp_in.write(user_utterance + \"\\n\")\n",
+    "                fp_out.write(bio_str + \"\\n\")\n",
+    "                fp_label.write(label + \"\\n\")            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
-   "id": "0851730f",
+   "execution_count": 432,
+   "id": "4d86345d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac1e6dc",
+   "id": "fd72b82d",
    "metadata": {},
    "outputs": [],
    "source": []
