bio format for each domian

--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 424,
-   "id": "ff927a81",
+   "execution_count": 1252,
+   "id": "ed853ce0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "file_ind = \"002\"\n",
-    "target_dir = \"dev_gen/\"\n",
-    "#target_dir = \"debugs/\"\n",
+    "file_ind = \"017\"\n",
+    "#target_dir = \"dev_gen/\"\n",
+    "target_dir = \"test_police/\"\n",
     "mwoz_dir = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/\"\n",
     "mwoz_file =  mwoz_dir + \"dialogues_\" + file_ind + \".json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
     "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
     "label_file = target_dir + \"label\" + file_ind\n",
-    "service_domains = [\"hotel\", \"restaurant\"]"
+    "#service_domains = [\"hotel\", \"restaurant\"]\n",
+    "#domains: hotel, train, attraction, restaurant, hospital, taxi, bus, police\n",
+    "service_domains = [\"police\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
-   "id": "fa514604",
+   "execution_count": 1253,
+   "id": "0198b3ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
-   "id": "257c41fd",
+   "execution_count": 1254,
+   "id": "5a11550d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
-   "id": "b7ec1958",
+   "execution_count": 1255,
+   "id": "ce8e9081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
-   "id": "716f746b",
+   "execution_count": 1256,
+   "id": "8898e3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
-   "id": "382da706",
+   "execution_count": 1257,
+   "id": "660a73e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
-   "id": "ea57a6ca",
+   "execution_count": 1258,
+   "id": "45367555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
-   "id": "e1730a81",
+   "execution_count": 1259,
+   "id": "8c95f9eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "id": "4d86345d",
+   "execution_count": 1260,
+   "id": "d22dc29a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd72b82d",
+   "id": "fc0b9a30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -284,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
