--- a/workflow/clinic_data/monologg_gen_clinic.ipynb
+++ b/workflow/clinic_data/monologg_gen_clinic.ipynb
@@ -8,11 +8,11 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "file_ind = \"\"\n",
-    "target_dir = \"/Users/S2K6/Desktop/ISchool/W_210/workflow/w210-capstone/workflow/clinic_data/clinic_BIO/\"\n",
+    "file_ind = \"clean\"\n",
+    "target_dir = \"/Users/S2K6/Desktop/ISchool/W_210/clinic_data/clinic_BIO/test/\"\n",
     "#target_dir = \"\"\n",
-    "mwoz_dir = \"/Users/S2K6/Desktop/ISchool/W_210/workflow/w210-capstone/workflow/clinic_data/\"\n",
-    "mwoz_file =  mwoz_dir + \"clinical_dialogues.json\"\n",
+    "mwoz_dir = \"/Users/S2K6/Desktop/ISchool/W_210/clinic_data/\"\n",
+    "mwoz_file =  mwoz_dir + \"clinical_dialogues_test.json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
     "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
     "label_file = target_dir + \"label\" + file_ind\n",
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# build xlate table - xlate domain specific slot names and intents to generic name\n",
-    "xlate_slots_intents = False\n",
+    "xlate_slots_intents = True\n",
     "xlate_file = \"slot_xlate.json\"\n",
     "if xlate_slots_intents:\n",
     "    xlate_dict = {}\n",
@@ -118,7 +118,7 @@
     "    for i in range(len(words)): # check if each word in utterance exist in slot value\n",
     "        word = words[i]\n",
     "        if \"B-\" in word[0:2] or \"I-\" in word[0:2]:\n",
-    "                bio_str += word + ' '\n",
+    "            bio_str += word + ' '\n",
     "        else:\n",
     "            if i == len(words) - 1: # special handling for the last word; drop if all punctuations\n",
     "                for k in range(len(word)):\n",
