synthetic data fixes

--- a/workflow/clinic_data/monologg_gen_clinic.ipynb
+++ b/workflow/clinic_data/monologg_gen_clinic.ipynb
@@ -9,10 +9,10 @@
    "source": [
     "import json\n",
     "file_ind = \"clean\"\n",
-    "target_dir = \"/Users/S2K6/Desktop/ISchool/W_210/clinic_data/clinic_BIO/test/\"\n",
+    "target_dir = \"/Users/S2K6/Desktop/ISchool/W_210/clinic_data/clinic_BIO/\"\n",
     "#target_dir = \"\"\n",
     "mwoz_dir = \"/Users/S2K6/Desktop/ISchool/W_210/clinic_data/\"\n",
-    "mwoz_file =  mwoz_dir + \"clinical_dialogues_test.json\"\n",
+    "mwoz_file =  mwoz_dir + \"test_out.json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
     "seq_out_file = target_dir + \"seq\" + file_ind + \".out\"\n",
     "label_file = target_dir + \"label\" + file_ind\n",
