--- a/workflow/clinic_data/multiwozgen-clinic.ipynb
+++ b/workflow/clinic_data/multiwozgen-clinic.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d4683a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "utterance_file = \"clinical_dialogues_test.txt\"\n",
+    "utterance_file = \"test_in.txt\"\n",
     "dialog_cnt = 1000\n",
-    "outfile = \"clinical_dialogues_test.json\"\n",
+    "outfile = \"test_out.json\"\n",
     "json_list = []\n",
     "other_domains = [\"restaurant\", \"hotel\"]\n",
     "service_domain = \"clinic\"\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5bd97cc0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c8f72800",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1c5dfeb4",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6cb1bb14",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2c77a370",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7ace9e7c",
    "metadata": {},
    "outputs": [],
