modified clinic data split to 60:20 for train:test

--- a/workflow/clinic_data/multiwozgen-clinic.ipynb
+++ b/workflow/clinic_data/multiwozgen-clinic.ipynb
@@ -8,9 +8,9 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "utterance_file = \"test_in.txt\"\n",
+    "utterance_file = \"clinical_dialogues_test.txt\"\n",
     "dialog_cnt = 1000\n",
-    "outfile = \"test_out.json\"\n",
+    "outfile = \"clinical_dialogues_test.json\"\n",
     "json_list = []\n",
     "other_domains = [\"restaurant\", \"hotel\"]\n",
     "service_domain = \"clinic\"\n",
