stat generation on conversations

--- a/workflow/monologg_gen.ipynb
+++ b/workflow/monologg_gen.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1252,
-   "id": "ed853ce0",
+   "execution_count": 443,
+   "id": "e3c706b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "file_ind = \"017\"\n",
-    "#target_dir = \"dev_gen/\"\n",
-    "target_dir = \"test_police/\"\n",
+    "target_dir = \"debugs/\"\n",
+    "#target_dir = \"test_police/\"\n",
     "mwoz_dir = \"/code/workflows/multiwoz/data/MultiWOZ_2.2/train/\"\n",
     "mwoz_file =  mwoz_dir + \"dialogues_\" + file_ind + \".json\"\n",
     "seq_in_file = target_dir + \"seq\" + file_ind + \".in\"\n",
@@ -18,13 +18,13 @@
     "label_file = target_dir + \"label\" + file_ind\n",
     "#service_domains = [\"hotel\", \"restaurant\"]\n",
     "#domains: hotel, train, attraction, restaurant, hospital, taxi, bus, police\n",
-    "service_domains = [\"police\"]"
+    "service_domains = [\"train\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1253,
-   "id": "0198b3ab",
+   "execution_count": 444,
+   "id": "12b939f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1254,
-   "id": "5a11550d",
+   "execution_count": 445,
+   "id": "7ba2ba2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1255,
-   "id": "ce8e9081",
+   "execution_count": 446,
+   "id": "f19ff553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1256,
-   "id": "8898e3df",
+   "execution_count": 447,
+   "id": "29951b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
-   "id": "660a73e7",
+   "execution_count": 448,
+   "id": "973915ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1258,
-   "id": "45367555",
+   "execution_count": 449,
+   "id": "730aa9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +177,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1259,
-   "id": "8c95f9eb",
+   "execution_count": 450,
+   "id": "8d6fb8aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of transactions in the file: 246\n",
+      "Number of domain relevant transactions: 82\n",
+      "Number of utterances relevant for the domain: 539\n"
+     ]
+    }
+   ],
    "source": [
+    "transaction_cnt = 0\n",
+    "domain_transaction_cnt = 0\n",
+    "domain_dialog_cnt = 0\n",
     "for dialogue in mwoz_dialogues_list: # for each dialogue in the dialog file\n",
+    "    transaction_cnt += 1\n",
     "    services = dialogue[\"services\"]\n",
     "    if not domain_of_interest(set(services), service_domains): # only restaurant and hotel domains\n",
     "        continue\n",
     "    \n",
+    "    domain_transaction_cnt += 1\n",
     "    for turn in dialogue[\"turns\"]:\n",
     "        if turn[\"speaker\"] == \"SYSTEM\": # skip all the system generated dialogs\n",
     "            continue\n",
@@ -246,13 +261,18 @@
     "            else:\n",
     "                fp_in.write(user_utterance + \"\\n\")\n",
     "                fp_out.write(bio_str + \"\\n\")\n",
-    "                fp_label.write(label + \"\\n\")            "
+    "                fp_label.write(label + \"\\n\")\n",
+    "                domain_dialog_cnt += 1\n",
+    "\n",
+    "print(\"Number of transactions in the file:\", transaction_cnt)\n",
+    "print(\"Number of domain relevant transactions:\", domain_transaction_cnt)\n",
+    "print(\"Number of utterances relevant for the domain:\", domain_dialog_cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1260,
-   "id": "d22dc29a",
+   "execution_count": 451,
+   "id": "04c2cfc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0b9a30",
+   "id": "5c58df6d",
    "metadata": {},
    "outputs": [],
    "source": []
